
= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.5.13 (future) =
* Added more robust charset conversion to deal with malformed emails.
* Ensure the default title is used when category etc parsing results in blank title

= 1.5.12 (2013.06.08) =
* Added full paths to includes in config_form due to some hosts having include_path set in a way that breaks Postie.
* Added some checks for emails that aren't correctly formatted (AirMail/WinLink)
* Consolidated environmental checks
* Added logic for Debian location of wp-config.php

= 1.5.11 (2013.06.02) =
* Moved test files out of main repository to decrease plugin size
* Fixed issue with readme file (Wordpress readme validator moved)

= 1.5.10 (2013.05.31) =
* Added template field descriptions to image tab.
* Fixed a bug where caption placeholder in templates wasn't being properly set.
* Additional test to see if wp-config.php can be found.

= 1.5.9 (2013.05.18) =
* Fixed a bug where valid users can post via email even though they don't have role permissions.
* Fixed a bug where nice_name was being used in the settings screen even though user_login was needed.
* Fixed the error message when the default poster is not valid.
* Fixed bug where gallery short tag was getting set when non-image attachments were found.

= 1.5.8 (2013.05.14) =
* Added additional default signature patterns.
* Fixed a bug where attachments were not showing up if :start or :end were used.

= 1.5.7 (2013.05.09) =
* Fixed bug where the admin user was not getting set as author in some cases.
* Fixed bug where file names were not being sanitized.
* Added setting to disable thumbnail generation.
* Updated the default signature patterns and help text.

= 1.5.6 (2013-05-07) =
* Fixed bug where default post format was empty when the theme didn't support any formats.
* Removed all hard coded references to wp-content.