@@ -25,6 +25,7 @@ Attachments are now processed in the order they were attached.
 = 1.5.13 (future) =
 * Added more robust charset conversion to deal with malformed emails.
 * Ensure the default title is used when category etc parsing results in blank title
+* Consolidate procedure for locating wp-config.php
 
 = 1.5.12 (2013.06.08) =
 * Added full paths to includes in config_form due to some hosts having include_path set in a way that breaks Postie.
